# GaussianSplatting

./: .gitignore  CMakeLists.txt  GaussianSplatting.js  GaussianSplatting.wasm  Makefile  README.md  build_web.sh  index.html  shader.wgsl
assets/: compute.wgsl  render.wgsl
libs/: cimgui.cmake
libs/cimgui/generator/: generator.sh  preprocesed.h
libs/cimgui/generator/output/: cimgui_impl.h  definitions.lua  impl_definitions.json  impl_definitions.lua
libs/cimgui/imgui/backends/: imgui_impl_wgpu.cpp  imgui_impl_wgpu.h
libs/cimgui/imgui/backends/webgpu/: webgpu_emscripten.h
libs/webgpu/: CMakeLists.txt
libs/webgpu/include/webgpu/: webgpu.h
src/: app.h  camera.h  imgui.h  input.c  input.h  main.c  utils.c  utils.h  webgpu-utils.c  wgpu-utils.c  wgpu-utils.h
